[package]
name = "nebulous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = {version = "3.2.16", features = ["derive"]}
crossterm = "0.25.0"
tokio ={version =  "1.20.1", features = ["full"] }
tui = "0.18.0"
