[package]
name = "nebulous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
aws-sdk-s3 = "0.17.0"
aws-types = "0.47.0"
clap = {version = "3.2.16", features = ["derive"]}
crossterm = "0.25.0"
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio ={version =  "1.20.1", features = ["full"] }
tui = "0.18.0"
